<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">LIST ACTIVITES</string>
    <string name="login_text">Login</string>
    <string name="password_text">password</string>
    <string name="loginname_text">login name</string>
    <string name="switch_text">What does this do?</string>
    <string name="dialog_message">leaving now</string>
    <string name="dialog_title">Title</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="start_chat_button">CHAT</string>
    <string name="chat_send_button">send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbar_action_two_text">Action two</string>
    <string name="toolbar_action_three_text">Action three</string>
    <string name="toolbar_action_one_text">Action one</string>
    <string name="start_toolbar">test toolbar</string>
    <string name="toolbar_about_text">About</string>
    <string name="toolbar_action_two_title">Do you want to go Back?</string>
    <string name="toolbar_action_two_positive">yes</string>
    <string name="toolbar_action_two_negative">no</string>
</resources>