<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity"
android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login_text"
        android:layout_weight="1">

    </TextView>

    <EditText
        android:id = "@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/loginname_text"
        android:inputType="textEmailAddress"
        android:layout_weight="1">

    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/password_text"
        android:layout_weight="1">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_weight="1">

    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login_text">

    </Button>
</LinearLayout>