<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight='0'
        android:gravity="center"
        android:ellipsize="marquee"
        android:lines="4"
        android:maxLines="5"
        android:text="@string/hello_message" />

    <Button
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:id="@+id/start_listItems_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"/>

    <Button
        android:layout_weight="0"
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chat_button"
        android:layout_gravity="center_horizontal"
        android:onClick="chat_button_clickListener"/>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

</android.support.v7.widget.LinearLayoutCompat>